--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,67 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout
-    android:id="@+id/activity_main"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
     <TextView
-        android:hint="ID"
-        android:layout_marginBottom="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
         android:id="@+id/textView1"
-        android:layout_weight="1"/>
-
-    <TextView
-        android:hint="User ID"
-        android:layout_marginBottom="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
+        android:layout_marginBottom="10dp"
+        android:layout_weight="1"
+        android:hint="ID"
+        android:textSize="20sp"/>
+
+    <TextView
         android:id="@+id/textView2"
-        android:layout_weight="1"/>
-
-    <TextView
-        android:hint="Title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:id="@+id/textView4"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:hint="User ID"
+        android:textSize="20sp"/>
 
     <TextView
-        android:hint="Body"
-        android:layout_marginBottom="40dp"
+        android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
+        android:layout_marginBottom="10dp"
+        android:layout_weight="1"
+        android:hint="Title"
+        android:textSize="20sp"/>
+
+    <TextView
         android:id="@+id/textView3"
-        android:layout_weight="1"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:layout_weight="1"
+        android:hint="Body"
+        android:textSize="20sp"/>
 
     <EditText
+        android:id="@+id/editText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:inputType="number"
-        android:ems="10"
-        android:id="@+id/editText"
         android:layout_weight="1"
-        android:hint="Enter post number"/>
+        android:ems="10"
+        android:hint="Enter post number"
+        android:inputType="number"/>
 
     <Button
-        android:text="Get post"
+        android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/button"
-        android:layout_weight="1"/>
+        android:layout_marginBottom="20dp"
+        android:layout_weight="1"
+        android:text="Get post"/>
+
+    <EditText
+        android:id="@+id/commentBox"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_marginBottom="10dp"
+        android:layout_weight="1"
+        android:ems="10"
+        android:gravity="top"/>
+
+    <Button
+        android:id="@+id/getCommentBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Get Comments"/>
 
 
 </LinearLayout>
+
